--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 version: '3.9'
 
+networks:
+  cynett-network:
+    name: cynett-network
+    driver: bridge
+
 services:
   app:
     build: .
@@ -9,9 +14,18 @@ services:
     env_file:
       - .env
     ports:
-      - 3000:3000
+      - 4000:4000
+    networks:
+      - cynett-network
     logging:
       driver: 'json-file'
       options:
         max-size: '10m'
         max-file: '5'
+
+  redis:
+    image: 'bitnami/redis:latest'
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    networks:
+      - cynett-network
