--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,13 @@ services:
 
   redis:
     image: 'bitnami/redis:latest'
+    container_name: cynett-redis
+    ports:
+      - 6379:6379
     environment:
-      - ALLOW_EMPTY_PASSWORD=yes
+      - ALLOW_EMPTY_PASSWORD=false
+      - REDIS_PASSWORD=1234
     networks:
       - cynett-network
+    volumes:
+      - ./.redis-data:/bitnami/redis/data
