--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "email": "pedro.oliveira.unb@gmail.com"
     },
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "redis": "^3.1.2"
     },
     "devDependencies": {
         "@babel/cli": "^7.13.14",
@@ -30,6 +31,7 @@
         "@babel/preset-env": "^7.13.15",
         "@babel/preset-typescript": "^7.13.0",
         "@types/express": "^4.17.11",
+        "@types/redis": "^2.8.28",
         "babel-plugin-module-resolver": "^4.1.0",
         "jest": "^26.6.3",
         "npm-check-updates": "^11.4.1",
