--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: "3.9"
 
 networks:
   cynett-network:
@@ -12,19 +12,19 @@ services:
     container_name: app
     restart: always
     env_file:
-      - .env
+      - .env.prod
     ports:
       - 4000:4000
     networks:
       - cynett-network
     logging:
-      driver: 'json-file'
+      driver: "json-file"
       options:
-        max-size: '10m'
-        max-file: '5'
+        max-size: "10m"
+        max-file: "5"
 
   redis:
-    image: 'bitnami/redis:latest'
+    image: "bitnami/redis:latest"
     container_name: cynett-redis
     ports:
       - 6379:6379
@@ -33,5 +33,3 @@ services:
       - REDIS_PASSWORD=1234
     networks:
       - cynett-network
-    volumes:
-      - ./.redis-data:/bitnami/redis/data
