--- a/package.json
+++ b/package.json
@@ -1,44 +1,46 @@
 {
-    "name": "cynett",
-    "version": "1.0.0",
-    "main": "index.js",
-    "license": "MIT",
-    "scripts": {
-        "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
-        "start": "node dist/server.js",
-        "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
-        "test": "jest"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/PedroUNB/Cynett-api"
-    },
-    "keywords": [
-        "Cynett"
-    ],
-    "author": {
-        "name": "Pedro Henrique F. de Oliveira",
-        "email": "pedro.oliveira.unb@gmail.com"
-    },
-    "dependencies": {
-        "express": "^4.17.1",
-        "redis": "^3.1.2"
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.13.14",
-        "@babel/core": "^7.13.15",
-        "@babel/node": "^7.13.13",
-        "@babel/preset-env": "^7.13.15",
-        "@babel/preset-typescript": "^7.13.0",
-        "@types/express": "^4.17.11",
-        "@types/redis": "^2.8.28",
-        "babel-plugin-module-resolver": "^4.1.0",
-        "jest": "^26.6.3",
-        "npm-check-updates": "^11.4.1",
-        "supertest": "^6.1.3",
-        "ts-jest": "^26.5.5",
-        "ts-node-dev": "^1.1.6",
-        "tsconfig-paths": "^3.9.0",
-        "typescript": "^4.2.4"
-    }
+  "name": "cynett",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
+    "start": "NODE_ENV=production node dist/server.js",
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PedroUNB/Cynett-api"
+  },
+  "keywords": [
+    "Cynett"
+  ],
+  "author": {
+    "name": "Pedro Henrique F. de Oliveira",
+    "email": "pedro.oliveira.unb@gmail.com"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "redis": "^3.1.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.15",
+    "@babel/node": "^7.13.13",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.11",
+    "@types/redis": "^2.8.28",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "jest": "^26.6.3",
+    "npm-check-updates": "^11.4.1",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.5",
+    "ts-node-dev": "^1.1.6",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.2.4"
+  }
 }
