--- a/package.json
+++ b/package.json
@@ -34,7 +34,14 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/redis": "^2.8.28",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^7.25.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "jest": "^26.6.3",
     "npm-check-updates": "^11.4.1",
     "supertest": "^6.1.3",
