--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "email": "pedro.oliveira.unb@gmail.com"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "redis": "^3.1.2"
@@ -31,6 +32,7 @@
     "@babel/node": "^7.13.13",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/redis": "^2.8.28",
