--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
+# Configuração do APP
 HOST=
 PORT=
 
+# Configuração do MONGO
+MONGO_HOST=
+MONGO_PORT=
+MONGO_NAME=
+MONGO_USER=
+MONGO_PASS=
+
+# Configuração do REDIS
 REDIS_HOST=
-REDIS_PASSWORD=
 REDIS_PORT=
+REDIS_PASSWORD=
