--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ services:
       - 4000:4000
     networks:
       - cynett-network
+    depends_on:
+      - redis
+      - mongo
     logging:
       driver: "json-file"
       options:
@@ -26,6 +29,7 @@ services:
   redis:
     image: "bitnami/redis:latest"
     container_name: cynett-redis
+    restart: always
     ports:
       - 6379:6379
     environment:
@@ -33,3 +37,18 @@ services:
       - REDIS_PASSWORD=1234
     networks:
       - cynett-network
+
+  mongo:
+    image: mongo:4.2
+    container_name: mongo
+    restart: always
+    ports:
+      - 27017:27017
+    networks:
+      - cynett-network
+    environment:
+      MONGO_INITDB_DATABASE: Cynett
+      MONGO_INITDB_ROOT_USERNAME: Cynett
+      MONGO_INITDB_ROOT_PASSWORD: Cynett
+    volumes:
+      - .:/usr/mongo/data
