--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,4 @@
 {
-  "env": {
-    "es2021": true,
-    "node": true,
-    "jest": true
-  },
-  "extends": [
-    "standard"
-  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
@@ -15,6 +7,15 @@
   "plugins": [
     "@typescript-eslint"
   ],
+  "extends": [
+    "standard",
+    "plugin:prettier/recommended"
+  ],
+  "env": {
+    "es2021": true,
+    "node": true,
+    "jest": true
+  },
   "rules": {
     "no-console": "warn",
     "space-before-function-paren": "off"
