--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
+    "format": "prettier --write \"src/**/*.ts\"",
     "start": "NODE_ENV=production node dist/server.js",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "mongoose": "^5.12.5",
     "morgan": "^1.10.0",
     "redis": "^3.1.2"
@@ -44,12 +47,15 @@
     "@typescript-eslint/parser": "^4.22.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "jest": "^26.6.3",
     "npm-check-updates": "^11.4.1",
+    "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.5",
     "ts-node-dev": "^1.1.6",
