--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "email": "pedro.oliveira.unb@gmail.com"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
     "morgan": "^1.10.0",
     "redis": "^3.1.2"
@@ -37,9 +39,11 @@
     "@babel/node": "^7.13.13",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/bcrypt": "^3.0.1",
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.5",
     "@types/morgan": "^1.9.2",
     "@types/redis": "^2.8.28",
